# Life

./: CMakeLists.txt  Life.sln  README.md  license.md
Life/: Game.cpp  Game.h  Life.vcxproj  main.cpp
src/: Game.cpp  main.cpp
